# IND_12_youtube-analytics-project

./: pyproject.toml
homework-2/: moscowpython.json
src/: channel.py
